[gd_scene load_steps=16 format=2]

[ext_resource path="res://particles/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/font/videophreak/VIDEOPHREAK.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://particles/Bars/LevelBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://particles/Bars/HPBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://particles/Counter/CoinCounter.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/GUI/texture/button_skills.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/texture/button_skills_blue.png" type="Texture" id=7]
[ext_resource path="res://assets/GUI/texture/button_skills_violet.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/texture/pauseBtn.png" type="Texture" id=9]
[ext_resource path="res://assets/GUI/texture/playBtn.png" type="Texture" id=10]
[ext_resource path="res://assets/GUI/font/subjectivity/Subjectivity-Black.otf" type="DynamicFontData" id=11]
[ext_resource path="res://particles/Transition/Transition.tscn" type="PackedScene" id=12]
[ext_resource path="res://particles/Pause/PauseMenu.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="MainText" type="Label" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -42.0
margin_right = 150.0
margin_bottom = 42.0
rect_min_size = Vector2( 300, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="InfoContainer" type="MarginContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 10.0
margin_right = 1020.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Size Flags" ]
__meta__ = {
"_edit_group_": true
}

[node name="MainBox" type="HBoxContainer" parent="InfoContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 492.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="LevelBar" parent="InfoContainer/MainBox" index="0" instance=ExtResource( 3 )]

margin_bottom = 40.0
size_flags_horizontal = 3
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="HPBar" parent="InfoContainer/MainBox" index="1" instance=ExtResource( 4 )]

margin_left = 254.0
margin_right = 484.0
margin_bottom = 40.0
size_flags_horizontal = 3
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="CoinCounter" parent="." index="2" instance=ExtResource( 5 )]

modulate = Color( 0.96875, 0.957397, 0.957397, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -108.0
margin_right = 0.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 8
size_flags_vertical = 9
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="TextDisappearTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="SkillButton" type="TextureButton" parent="." index="4"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="PauseButton" type="TextureButton" parent="." index="5"]

modulate = Color( 0.832031, 0.481018, 0.505699, 1 )
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -60.0
margin_top = 50.0
margin_right = 452.0
margin_bottom = 562.0
rect_min_size = Vector2( 40, 40 )
rect_scale = Vector2( 0.085, 0.085 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 10 )
_sections_unfolded = [ "Margin", "Rect", "Textures", "Visibility" ]

[node name="SkillMenu" type="WindowDialog" parent="." index="6"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -163.0
margin_right = 264.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/title_font = SubResource( 2 )
custom_colors/title_color = Color( 0.135757, 0.597379, 0.847656, 1 )
popup_exclusive = false
window_title = "Skills"
resizable = true
_sections_unfolded = [ "Focus", "Popup", "Rect", "Size Flags", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="WaitTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="Transition" parent="." index="8" instance=ExtResource( 12 )]

[node name="PauseMenu" parent="." index="9" instance=ExtResource( 13 )]

visible = false


